Refactored the http client